include $(top_srcdir)/Makefile.incl.am

INCLUDES = -I$(top_builddir)

noinst_LTLIBRARIES = \
	libpegpycxx.la

libowpycxx_la_SOURCES = \
	PyCxxConfig.hpp \
	PyCxxException.hpp \
	PyCxxExtensions.cpp \
	PyCxxExtensions.hpp \
	PyCxxObjects.cpp \
	PyCxxObjects.hpp \
	PyCxxPythonWrap.cpp \
	PyCxxPythonWrap.hpp \
	PyCxxSupport.cpp
